# termynal.py

./: .gitignore  .travis.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  termynal.css
.github/: dependabot.yml
.github/workflows/: bump.yml  check.yml  check_deps.yml  github_pages.yml  pr.yml  publish_pypi.yml  pypi.yml
changelog/: index.html
code-of-conduct/: index.html
configuration/: index.html
contributing/: index.html
docs/: README.md  configuration.md
search/: search_index.json
termynal/: markdown.py  plugin.py
tests/: test_cases.yml  test_markdown_extension.py  test_mkdocs_plugin.py
